Bug 243503 - Lokalize shows over 100% compatibility
Summary: Lokalize shows over 100% compatibility
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: translation memory (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Nick Shaforostoff
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-03 16:18 UTC by Maxime Corteel
Modified: 2013-11-14 13:12 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxime Corteel 2010-07-03 16:18:13 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The translation memory zone show a percentage of 100.66% :
/100.66%/ Single color
[Ctrl+1] Couleur unique

Reproducible: Always

Steps to Reproduce:
Translate something, go to another message and back to the first one.

Actual Results:  
Compatibility is more than 100%

Expected Results:  
100% seems reasonable.
Comment 1 Zayed Al-Saidi 2010-07-27 20:49:11 UTC
I can confirm it for version 1.0 at least.
Comment 2 Mariusz 2012-04-24 15:10:44 UTC
I can confirm it in Lokalize 1.4 build from KDE 4.8.2 sources.

/100.33%/ Filter:
[Ctrl+1] Filtr:
Comment 3 Chao Feng 2013-11-14 13:12:29 UTC
Git commit 071606f1352092e5eb6fcf3302fbfe480a0c3f29 by Feng Chao.
Committed on 10/11/2013 at 10:11.
Pushed by fengchao into branch 'master'.

Fix Bug 243503 - Lokalize shows over 100% compatibility

M  +1    -1    src/tm/tmview.cpp

http://commits.kde.org/lokalize/071606f1352092e5eb6fcf3302fbfe480a0c3f29