Fix Bug 243503 - Lokalize shows over 100% compatibility

BUG: 243503